Source/Alternet.UI/Native/Font.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class Font : NativeObject
    {
        static Font()
        {
        }
        
        public Font()
        {
            SetNativePointer(NativeApi.Font_Create_());
        }
        
        public Font(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public float SizeInPoints
        {
            get
            {
                CheckDisposed();
                return NativeApi.Font_GetSizeInPoints_(NativePointer);
            }
            
        }
        
        public Alternet.Drawing.FontStyle Style
        {
            get
            {
                CheckDisposed();
                return NativeApi.Font_GetStyle_(NativePointer);
            }
            
        }
        
        public static System.IntPtr CreateFontRef(Alternet.Drawing.GenericFontFamily genericFamily, Alternet.UI.NativeStringSpan familyName, float emSizeInPoints, Alternet.Drawing.FontStyle style)
        {
            var familyName_Native = familyName.ToNative();
return NativeApi.Font_CreateFontRef_(genericFamily, ref familyName_Native, emSizeInPoints, style);
        }
        
        public static System.IntPtr CreateFontRefDefault()
        {
            return NativeApi.Font_CreateFontRefDefault_();
        }
        
        public static System.IntPtr CreateFontRefDefaultMono()
        {
            return NativeApi.Font_CreateFontRefDefaultMono_();
        }
        
        public static void DeleteFontRef(System.IntPtr fontRef)
        {
            NativeApi.Font_DeleteFontRef_(fontRef);
        }
        
        public Alternet.Drawing.SizeI GetPixelSize()
        {
            CheckDisposed();
            return NativeApi.Font_GetPixelSize_(NativePointer);
        }
        
        public bool IsUsingSizeInPixels()
        {
            CheckDisposed();
            return NativeApi.Font_IsUsingSizeInPixels_(NativePointer);
        }
        
        public int GetNumericWeight()
        {
            CheckDisposed();
            return NativeApi.Font_GetNumericWeight_(NativePointer);
        }
        
        public bool GetUnderlined()
        {
            CheckDisposed();
            return NativeApi.Font_GetUnderlined_(NativePointer);
        }
        
        public bool GetItalic()
        {
            CheckDisposed();
            return NativeApi.Font_GetItalic_(NativePointer);
        }
        
        public bool GetStrikethrough()
        {
            CheckDisposed();
            return NativeApi.Font_GetStrikethrough_(NativePointer);
        }
        
        public int GetEncoding()
        {
            CheckDisposed();
            return NativeApi.Font_GetEncoding_(NativePointer);
        }
        
        public bool IsFixedWidth()
        {
            CheckDisposed();
            return NativeApi.Font_IsFixedWidth_(NativePointer);
        }
        
        public static int GetDefaultEncoding()
        {
            return NativeApi.Font_GetDefaultEncoding_();
        }
        
        public static void SetDefaultEncoding(int encoding)
        {
            NativeApi.Font_SetDefaultEncoding_(encoding);
        }
        
        public int GetWeight()
        {
            CheckDisposed();
            return NativeApi.Font_GetWeight_(NativePointer);
        }
        
        public void Initialize(Alternet.Drawing.GenericFontFamily genericFamily, Alternet.UI.NativeStringSpan familyName, float emSizeInPoints, Alternet.Drawing.FontStyle style)
        {
            CheckDisposed();
            var familyName_Native = familyName.ToNative();
NativeApi.Font_Initialize_(NativePointer, genericFamily, ref familyName_Native, emSizeInPoints, style);
        }
        
        public void InitializeWithDefaultFont()
        {
            CheckDisposed();
            NativeApi.Font_InitializeWithDefaultFont_(NativePointer);
        }
        
        public void InitializeWithDefaultMonoFont()
        {
            CheckDisposed();
            NativeApi.Font_InitializeWithDefaultMonoFont_(NativePointer);
        }
        
        public void InitializeFromFont(Font font)
        {
            CheckDisposed();
            NativeApi.Font_InitializeFromFont_(NativePointer, font.NativePointer);
        }
        
        public static bool IsFamilyValid(Alternet.UI.NativeStringSpan fontFamily)
        {
            var fontFamily_Native = fontFamily.ToNative();
return NativeApi.Font_IsFamilyValid_(ref fontFamily_Native);
        }
        
        public static Alternet.UI.NativeStringSpan GetGenericFamilyName(Alternet.Drawing.GenericFontFamily genericFamily)
        {
            return NativeApi.Font_GetGenericFamilyName_(genericFamily);
        }
        
        public static Alternet.UI.NativeStringSpan GetFamilies()
        {
            return NativeApi.Font_GetFamilies_();
        }
        
        public Alternet.UI.NativeStringSpan GetName()
        {
            CheckDisposed();
            return NativeApi.Font_GetName_(NativePointer);
        }
        
        public Alternet.UI.NativeStringSpan GetDescription()
        {
            CheckDisposed();
            return NativeApi.Font_GetDescription_(NativePointer);
        }
        
        public bool IsEqualTo(Font other)
        {
            CheckDisposed();
            return NativeApi.Font_IsEqualTo_(NativePointer, other.NativePointer);
        }
        
        public Alternet.UI.NativeStringSpan Serialize()
        {
            CheckDisposed();
            return NativeApi.Font_Serialize_(NativePointer);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Font_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern float Font_GetSizeInPoints_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.FontStyle Font_GetStyle_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Font_CreateFontRef_(Alternet.Drawing.GenericFontFamily genericFamily, ref Alternet.UI.NativeStringSpan familyName, float emSizeInPoints, Alternet.Drawing.FontStyle style);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Font_CreateFontRefDefault_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Font_CreateFontRefDefaultMono_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_DeleteFontRef_(System.IntPtr fontRef);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI Font_GetPixelSize_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_IsUsingSizeInPixels_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Font_GetNumericWeight_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_GetUnderlined_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_GetItalic_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_GetStrikethrough_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Font_GetEncoding_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_IsFixedWidth_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Font_GetDefaultEncoding_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_SetDefaultEncoding_(int encoding);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Font_GetWeight_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_Initialize_(IntPtr obj, Alternet.Drawing.GenericFontFamily genericFamily, ref Alternet.UI.NativeStringSpan familyName, float emSizeInPoints, Alternet.Drawing.FontStyle style);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_InitializeWithDefaultFont_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_InitializeWithDefaultMonoFont_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Font_InitializeFromFont_(IntPtr obj, IntPtr font);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_IsFamilyValid_(ref Alternet.UI.NativeStringSpan fontFamily);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan Font_GetGenericFamilyName_(Alternet.Drawing.GenericFontFamily genericFamily);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan Font_GetFamilies_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan Font_GetName_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan Font_GetDescription_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Font_IsEqualTo_(IntPtr obj, IntPtr other);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.UI.NativeStringSpan Font_Serialize_(IntPtr obj);
            
        }
    }
}
